--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,9 +31,12 @@ jobs:
         pip install wheel
         pip install --no-cache-dir Cython
         pip install flake8 pytest
-        export CPLUS_INCLUDE_PATH=/usr/include/gdal
-        export C_INCLUDE_PATH=/usr/include/gdal
-        pip install GDAL==$(gdal-config --version) --global-option=build_ext --global-option="-I/usr/include/gdal"
+        sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
+        sudo apt-get update
+        sudo apt-get install python-gdal
+#        export CPLUS_INCLUDE_PATH=/usr/include/gdal
+#        export C_INCLUDE_PATH=/usr/include/gdal
+#        pip install GDAL==$(gdal-config --version) --global-option=build_ext --global-option="-I/usr/include/gdal"
         if [ -f requirement-ci.txt ]; then pip install -r requirement-ci.txt; fi
         export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1:/$LD_PRELOAD
 # --include-dirs=/usr/include/gdal
