--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,7 @@ jobs:
         python-version: ["3.7", "3.8", "3.9"]
     env:
       OS: ${{ matrix.os }}
+#      PYTHON: 3.9
 
     steps:
     - uses: actions/checkout@master
@@ -16,6 +17,7 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -24,20 +26,15 @@ jobs:
         sudo apt-get install libproj-dev proj-data proj-bin
         sudo apt-get install libgeos-dev
         sudo apt-get install gdal-bin libgdal-dev libgdal-doc
-        sudo apt-get install -y python3.9-dev
-        sudo apt-get -y install python3.9-distutils python3-apt python3-pip python3-wheel
-        pip install wheel
-        pip install --no-cache-dir Cython
-        pip install flake8 pytest
         sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
         sudo apt-get update
         sudo apt-get install python-gdal
-#        export CPLUS_INCLUDE_PATH=/usr/include/gdal
-#        export C_INCLUDE_PATH=/usr/include/gdal
-#        pip install GDAL==$(gdal-config --version) --global-option=build_ext --global-option="-I/usr/include/gdal"
+        pip install wheel
+        pip install --no-cache-dir Cython
+        pip install flake8 pytest
         if [ -f requirement-ci.txt ]; then pip install -r requirement-ci.txt; fi
         export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1:/$LD_PRELOAD
-# --include-dirs=/usr/include/gdal
+
 #    - name: Lint with flake8
 #      run: |
 #        # stop the build if there are Python syntax errors or undefined names
