--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,12 +16,11 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+       $CONDA/bin/conda env update --file environment.yml --name base
+#        python -m pip install --upgrade pip
         # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA/bin/conda env update --file environment.yml --name base
         sudo apt-get update
         sudo apt-get install libproj-dev proj-data proj-bin
         sudo apt-get install libgeos-dev
