--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,20 +5,20 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] #, macos-latest, windows-latest
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.9"] #"3.7", "3.8",
     env:
       OS: ${{ matrix.os }}
-
+#      PYTHON: '3.9'
     steps:
     - uses: actions/checkout@master
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Setup Python
       uses: actions/setup-python@master
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version:  ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-       $CONDA/bin/conda env update --file environment.yml --name base
+        $CONDA/bin/conda env update --file environment.yml --name base
 #        python -m pip install --upgrade pip
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         sudo apt-get update
@@ -45,6 +45,7 @@ jobs:
       run: |
 #        pip install pytest
 #        pip install pytest-cov
+#        pytest --cov=./ --cov-report=xml
         conda install pytest, pytest-cov
         $CONDA/bin/pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
