--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.9"] #"3.7", "3.8",
+        python-version: ["3.8", "3.9"] #"3.7",
     env:
       OS: ${{ matrix.os }}
 #      PYTHON: '3.9'
