--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,16 +6,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.8", "3.9"] #"3.7",
+        python-version: ["3.7", "3.8", "3.9"] #
     env:
       OS: ${{ matrix.os }}
-#      PYTHON: '3.9'
     steps:
     - uses: actions/checkout@master
     - name: Setup Python
       uses: actions/setup-python@master
-      with:
-        python-version:  ${{ matrix.python-version }}
+#      with:
+#        python-version:  ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         $CONDA/bin/conda env update --file environment.yml --name base
