--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,8 @@ jobs:
     - uses: actions/checkout@master
     - name: Setup Python
       uses: actions/setup-python@master
-
+      with:
+        python-version:  3.7 #${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         $CONDA/bin/conda env update --file environment.yml --name base
