--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,16 +5,20 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.7", "3.8", "3.9"] #
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ "3.7", "3.8", "3.9" ]
     env:
       OS: ${{ matrix.os }}
+    #      PYTHON: 3.9
+
     steps:
-    - uses: actions/checkout@master
-    - name: Setup Python
-      uses: actions/setup-python@master
-      with:
-        python-version:  3.7 #${{ matrix.python-version }}
+      - uses: actions/checkout@master
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@master
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+
     - name: Install dependencies
       run: |
         $CONDA/bin/conda env update --file environment.yml --name base
