--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,17 +1,14 @@
 name: CI
-on:
-  - push
-  - pull_request
+on: [push, pull_request]
 jobs:
-  tests:
-    runs-on: ${{ matrix.os }}
+  Run:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         python-version: [ "3.7", "3.8", "3.9" ]
     env:
       OS: ${{ matrix.os }}
-
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
       - name: Set up Python ${{ matrix.python-version }}
