--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,8 +6,9 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         python-version: [ "3.7", "3.8", "3.9" ]
-    env:
-      OS: ${{ matrix.os }}
+#    env:
+#      OS: ${{ matrix.os }}
+
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
