--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,14 +2,15 @@ name: CI
 on: [push, pull_request]
 jobs:
   Run:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         python-version: [ "3.7", "3.8", "3.9" ]
-#    env:
-#      OS: ${{ matrix.os }}
+    env:
+      OS: ${{ matrix.os }}
 
-    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@master
       - name: Set up Python ${{ matrix.python-version }}
