--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ "3.7", "3.8", "3.9" ]
+        os: [ ubuntu-latest] #, macos-latest, windows-latest
+        python-version: ["3.9" ] # "3.7", "3.8",
     env:
       OS: ${{ matrix.os }}
 
@@ -28,8 +28,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          conda info
-          conda list
           conda env update --file environment.yml --name base
           # python -m pip install --upgrade pip  $CONDA/bin/
           # $CONDA is an environment variable pointing to the root of the miniconda directory
@@ -57,11 +55,11 @@ jobs:
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Generate coverage report
         run: |
-          #pip install pytest
-          #pip install pytest-cov
+          pip install pytest
+          pip install pytest-cov
           #pytest --cov=./ --cov-report=xml
-          conda install pytest, pytest-cov
-          $CONDA/bin/pytest --cov=./ --cov-report=xml
+#          conda install pytest, pytest-cov
+          pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
