--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
+          conda list
           #pytest --cov=./ --cov-report=xml
           #conda install pytest, pytest-cov
           pytest --cov=./ --cov-report=xml
