--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,7 +60,7 @@ jobs:
           conda list
           #pytest --cov=./ --cov-report=xml
           #conda install pytest, pytest-cov
-          pytest --cov=./ --cov-report=xml
+          python -m pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
