--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,6 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           miniconda-version: "latest"
-          activate-environment: anaconda-client-env
           channels: conda-forge
           allow-softlinks: true
           channel-priority: flexible
@@ -29,6 +28,10 @@ jobs:
       - name: Install dependencies
         run: |
           conda env update --file environment.yml --name base
+          pip install pytest
+          pip install pytest-cov
+          conda list
+          python -m pytest --cov=./ --cov-report=xml
           # python -m pip install --upgrade pip  $CONDA/bin/
           # $CONDA is an environment variable pointing to the root of the miniconda directory
 
@@ -53,14 +56,14 @@ jobs:
 #        $CONDA/bin/flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Generate coverage report
-        run: |
-          pip install pytest
-          pip install pytest-cov
-          conda list
-          #pytest --cov=./ --cov-report=xml
-          #conda install pytest, pytest-cov
-          python -m pytest --cov=./ --cov-report=xml
+#      - name: Generate coverage report
+#        run: |
+#          pip install pytest
+#          pip install pytest-cov
+#          conda list
+#          #pytest --cov=./ --cov-report=xml
+#          #conda install pytest, pytest-cov
+#          python -m pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
