--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,15 +27,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          echo $pwd
           $CONDA/bin/conda env update --file environment.yml --name base
-          #pip install pytest
-          #pip install pytest-cov
-          $CONDA/bin/conda list
-          which python
-          $CONDA/bin/pytest --cov=./ --cov-report=xml
-
-          # python -m pip install --upgrade pip
-          # $CONDA is an environment variable pointing to the root of the miniconda directory
 
           #sudo apt-get update
           #sudo apt-get install libproj-dev proj-data proj-bin
@@ -43,12 +36,6 @@ jobs:
           #sudo apt-get install gdal-bin libgdal-dev libgdal-doc
           #sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
           #sudo apt-get update
-
-          # pip install wheel
-          #pip install --no-cache-dir Cython
-          #pip install flake8 pytest
-          #if [ -f requirement-ci.txt ]; then pip install -r requirement-ci.txt; fi
-          #export LD_PRELOAD=/usr/lib/aarch64-linux-gnu/libgomp.so.1:/$LD_PRELOAD
 
 #    - name: Lint with flake8
 #      run: |
@@ -58,14 +45,10 @@ jobs:
 #        $CONDA/bin/flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-#      - name: Generate coverage report
-#        run: |
-#          pip install pytest
-#          pip install pytest-cov
-#          conda list
-#          #pytest --cov=./ --cov-report=xml
-#          #conda install pytest, pytest-cov
-#          python -m pytest --cov=./ --cov-report=xml
+      - name: Generate coverage report
+        run: |
+          $CONDA/bin/pytest --cov=./ --cov-report=xml
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
