--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,15 +27,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          echo $pwd
           $CONDA/bin/conda env update --file environment.yml --name base
-
-          #sudo apt-get update
-          #sudo apt-get install libproj-dev proj-data proj-bin
-          #sudo apt-get install libgeos-dev
-          #sudo apt-get install gdal-bin libgdal-dev libgdal-doc
-          #sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
-          #sudo apt-get update
+          python setup.py install
+          pwd
+          ls -R
 
 #    - name: Lint with flake8
 #      run: |
@@ -47,6 +42,8 @@ jobs:
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Generate coverage report
         run: |
+          pwd
+          ls -R
           $CONDA/bin/pytest --cov=./ --cov-report=xml
 
       - name: Upload coverage to Codecov
