--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,7 +30,7 @@ jobs:
           $CONDA/bin/conda env update --file environment.yml --name base
           python setup.py install
           pwd
-          ls -R
+          ls
 
 #    - name: Lint with flake8
 #      run: |
@@ -41,9 +41,9 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Generate coverage report
+        working-directory: ./Examples
         run: |
           pwd
-          ls -R
           $CONDA/bin/pytest --cov=./ --cov-report=xml
 
       - name: Upload coverage to Codecov
