--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,7 +39,7 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Generate coverage report
-        working-directory: ../../
+        working-directory: ../
         run: |
           pwd
           $CONDA/bin/pytest --cov=./ --cov-report=xml
