--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,55 +9,54 @@ name = "my-custom-repo"  # This name will be used in the configuration to retrei
 url = "https://my.customrepo.com/simple/"  # URL used to download your packages from
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<3.10"
+python = ">=3.7.0,<3.10"
 pandas = "<=1.3.2,<1.3.4"
-numpy = ">=1.21.2,<1.21.4"
-matplotlib = "=>3.4.2,<3.4.3"
-scipy = ">=1.7.0,<1.7.2"
-statsmodels = ">=0.12.2,<0.13.0"
-netCDF4 = ">=1.5.5,<1.5.8"
-scikit-learn = ">=0.24.2,<1.0.1"
-scikit-image = "^0.18.3"
-joblib = "^1.1.0"
-ecmwf-api-client = "^1.6.1"
-pyproj = "^3.2.1"
-proj = "^0.2.0"
-Shapely = "^1.8.0"
-pytest = "^6.2.5"
-Fiona = "^1.8.20"
-geopandas = "^0.10.2"
-rasterio = "^1.2.10"
-rasterstats = "^0.16.0"
-oasis = "^0.1.3"
-ffmpeg-python = "^0.2.0"
-gdal = ">=3.3.3,<3.3.4"
-# gdal = { file = "/home/mostafa/Downloads/GDAL-3.3.3-cp39-cp39-win32.whl" }
-pre-commit = "^2.15.0"
-geopy = "^2.2.0"
+# numpy = ">=1.21.2,<1.21.4"
+# matplotlib = "=>3.4.2,<3.4.3"
+# scipy = ">=1.7.0,<1.7.2"
+# statsmodels = ">=0.12.2,<0.13.0"
+# netCDF4 = ">=1.5.5,<1.5.8"
+# scikit-learn = ">=0.24.2,<1.0.1"
+# scikit-image = "^0.18.3"
+# joblib = "^1.1.0"
+# ecmwf-api-client = "^1.6.1"
+# pyproj = "^3.2.1"
+# proj = "^0.2.0"
+# Shapely = "^1.8.0"
+# pytest = "^6.2.5"
+# Fiona = "^1.8.20"
+# geopandas = "^0.10.2"
+# rasterio = "^1.2.10"
+# rasterstats = "^0.16.0"
+# oasis = "^0.1.3"
+# ffmpeg-python = "^0.2.0"
+# gdal = ">=3.3.3,<3.4.1"
+# # gdal = { file = "/home/mostafa/Downloads/GDAL-3.3.3-cp39-cp39-win32.whl" }
+# pre-commit = "^2.15.0"
+# geopy = "^2.2.0"
 
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-pytest-cov = "^2.12.1"
+# pytest-cov = "^2.12.1"
 
-coverage = {extras = ["toml"], version = "^5.4"}
-safety = "^1.10.3"
-mypy = "^0.910"
-typeguard = "^2.12.1"
-
-xdoctest = {extras = ["colors"], version = "^0.15.5"}
-pre-commit = "^2.13.0"
-flake8 = "^3.9.2"
-loguru = "^0.5.3"
-black = "^20.8b1"
-flake8-bandit = "^2.1.2"
-flake8-bugbear = "^21.4.3"
-flake8-docstrings = "^1.6.0"
-flake8-rst-docstrings = "^0.2.3"
-pep8-naming = "^0.12.0"
-darglint = "^1.8.0"
-reorder-python-imports = "^2.6.0"
-pre-commit-hooks = "^4.0.1"
+# coverage = {extras = ["toml"], version = "^5.4"}
+# safety = "^1.10.3"
+# mypy = "^0.910"
+# typeguard = "^2.12.1"
+# xdoctest = {extras = ["colors"], version = "^0.15.5"}
+# pre-commit = "^2.13.0"
+# flake8 = "^3.9.2"
+# loguru = "^0.5.3"
+# black = "^20.8b1"
+# flake8-bandit = "^2.1.2"
+# flake8-bugbear = "^21.4.3"
+# flake8-docstrings = "^1.6.0"
+# flake8-rst-docstrings = "^0.2.3"
+# pep8-naming = "^0.12.0"
+# darglint = "^1.8.0"
+# reorder-python-imports = "^2.6.0"
+# pre-commit-hooks = ">=3.4.0,<=4.0.1"
 
 [tool.coverage.paths]
 source = ["Hapi", "*/site-packages"]
