--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,14 +36,14 @@ repos:
                 --indent=4,
                 --no-sort-keys ]
     -   id: requirements-txt-fixer
-        name: "[reqs - format] fix requirements.txt"
+        name: "[reqs - format] fix requirement.txt"
 
 #    - repo: https://github.com/PyCQA/docformatter
 #      rev: v1.4
 #      hooks:
 #        - id: docformatter
-#          name: "[py   - format] docformatter"
-#          args: [ -i, --wrap-summaries, "0" ]
+##          name: "[py   - format] docformatter"
+##          args: [ -i, --wrap-summaries, "0" ]
 
 #    - repo: https://github.com/PyCQA/pydocstyle
 #      rev: 6.1.1
@@ -51,9 +51,6 @@ repos:
 #        - id: pydocstyle
 #          name: "[py   - check] pydocstyle"
 #          files: ^Hapi/
-
-
-
     # TODO : uncheck later and fix all the problems of line too long
 #-   repo: https://gitlab.com/pycqa/flake8
 #    rev: 3.8.4
