--- a/environment.yml
+++ b/environment.yml
@@ -2,17 +2,17 @@ channels:
   - conda-forge
 dependencies:
   - pip >=21.3.1
-  - numpy >=1.21.2,<1.21.5
-  - gdal >=3.3.3,<3.4.1
+  - numpy >=1.21.2,<1.22.3
+  - gdal >=3.3.3,<3.4.2
   - affine >=2.3.0
   - fiona >=1.8.20
   - proj >=0.2.0
   - pyproj >=3.2.1,<=3.3.0
-  - pandas >=1.3.2,<1.3.5
+  - pandas >=1.3.2,<1.4.2
   - geopandas >=0.10.2
   - matplotlib >=3.4.2,<3.6.0
   - python >=3.7.1,<3.10
-  - scipy >=1.7.0,<1.7.4
+  - scipy >=1.7.0,<1.8.1
   - shapely >=1.8.0
   - statsmodels >=0.12.2,<0.14.0
   - rasterio >=1.2.10
@@ -25,8 +25,8 @@ dependencies:
   - joblib >=1.1.0
   - geopy >=2.2.0
   - pip:
-      - loguru >=0.5.3
-      - pytest
-      - pytest-cov
+      - loguru >=0.6.0
+      - pytest >=6.2.5
+      - pytest-cov >=2.12.1
 #    - ffmpeg-python
     #- git+https://github.com/MAfarrag/HAPI.git
