--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,7 @@ dependencies:
   - ecmwf-api-client >=1.6.1
   - joblib >=1.1.0
   - geopy >=2.2.0
+  - geoplot >=0.4.4
   - pip:
       - loguru >=0.6.0
       - pytest >=6.2.5
