--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ examples/Hydrodynamic models/test_case/inputs/gauges/discharge_long_ts/Statistic
 examples/Hydrodynamic models/test_case/inputs/gauges/discharge_long_ts/Statistical analysis results/Figures/F-888555.png
 examples/Hydrodynamic models/test_case/inputs/gauges/discharge_long_ts/Statistical analysis results/Figures/F-999666.png
 *.qgz
+*.png
