--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,29 +11,28 @@ url = "https://my.customrepo.com/simple/"  # URL used to download your packages 
 [tool.poetry.dependencies]
 python = ">=3.7.0,<3.10"
 pandas = "<=1.3.2,<1.3.4"
-# numpy = ">=1.21.2,<1.21.4"
-# matplotlib = "=>3.4.2,<3.4.3"
-# scipy = ">=1.7.0,<1.7.2"
-# statsmodels = ">=0.12.2,<0.13.0"
-# netCDF4 = ">=1.5.5,<1.5.8"
-# scikit-learn = ">=0.24.2,<1.0.1"
-# scikit-image = "^0.18.3"
-# joblib = "^1.1.0"
-# ecmwf-api-client = "^1.6.1"
-# pyproj = "^3.2.1"
-# proj = "^0.2.0"
-# Shapely = "^1.8.0"
-# pytest = "^6.2.5"
-# Fiona = "^1.8.20"
-# geopandas = "^0.10.2"
-# rasterio = "^1.2.10"
-# rasterstats = "^0.16.0"
-# oasis = "^0.1.3"
-# ffmpeg-python = "^0.2.0"
-# gdal = ">=3.3.3,<3.4.1"
-# # gdal = { file = "/home/mostafa/Downloads/GDAL-3.3.3-cp39-cp39-win32.whl" }
-# pre-commit = "^2.15.0"
-# geopy = "^2.2.0"
+numpy = ">=1.21.2,<1.21.4"
+matplotlib = "=>3.4.2,<3.4.3"
+scipy = ">=1.7.0,<1.7.2"
+statsmodels = ">=0.12.2,<0.13.0"
+netCDF4 = ">=1.5.5,<1.5.8"
+scikit-learn = ">=0.24.2,<1.0.1"
+scikit-image = "^0.18.3"
+joblib = "^1.1.0"
+ecmwf-api-client = "^1.6.1"
+pyproj = "^3.2.1"
+proj = "^0.2.0"
+Shapely = "^1.8.0"
+pytest = "^6.2.5"
+Fiona = "^1.8.20"
+geopandas = "^0.10.2"
+rasterio = "^1.2.10"
+rasterstats = "^0.16.0"
+oasis = "^0.1.3"
+ffmpeg-python = "^0.2.0"
+gdal = ">=3.3.3,<3.4.1"
+pre-commit = "^2.15.0"
+geopy = "^2.2.0"
 
 
 [tool.poetry.dev-dependencies]
