--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,11 @@ examples/data/Hapi.qgz
 *.qgz
 *.png
 .vscode
+examples/Hydrodynamic models/test_case/resultsMetricsHM_Q_Obs.geojson
+examples/Hydrodynamic models/test_case/resultsMetricsHM_Q_Obs.geojson.csv
+examples/Hydrodynamic models/test_case/resultsMetricsHM_Q_RRM.geojson
+examples/Hydrodynamic models/test_case/resultsMetricsHM_Q_RRM.geojson.csv
+examples/Hydrodynamic models/test_case/resultsMetricsHM_WL_Obs.geojson
+examples/Hydrodynamic models/test_case/resultsMetricsHM_WL_Obs.geojson.csv
+examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson
+examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson.csv
