--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,11 +1,11 @@
-{% set version = "1.0.5" %}
+{% set version = "1.2.0" %}
 
 package:
   name: hapi
   version: {{ version }}
 
 source:
-  path: F:\01Algorithms\Hydrology\HAPI
+  path: C:\MyComputer\01Algorithms\Hydrology\Hapi
 
 build:
   noarch: python
@@ -17,32 +17,36 @@ channels:
 
 requirements:
   host:
-  - python >=2.7
-  - pip
+  - python>=3.9.0,<3.10
+  - pip>=21.3.1
   run:
-    - pip >= 21.3.1
-    - numpy >=1.21.2,<1.21.5
-    - gdal >=3.3.3,<3.4.1
-    - affine >= 2.3.0
-    - fiona >= 1.8.20
-    - proj >= 0.2.0
-    - pyproj >=3.2.1,<=3.3.0
-    - pandas >=1.3.2,<1.3.5
-    - geopandas >= 0.10.2
-    - matplotlib >=3.4.2,<3.6.0
-    - python >=3.7.1,<3.10
-    - scipy >=1.7.0,<1.7.4
-    - shapely >=1.8.0
-    - statsmodels >=0.12.2,<0.14.0
-    - rasterio >= 1.2.10
-    - rasterstats >= 0.16.0
-    - oasis >= 0.1.3
-    - netCDF4 >=1.5.5,<1.5.9
-    - scikit-learn >=0.24.2,<1.0.2
-    - scikit-image >=0.18.3
-    - ecmwf-api-client >=1.6.1
-    - joblib >= 1.1.0
-    - geopy >=2.2.0
+    - numpy>=1.21.2,<1.22.4
+    - gdal==3.4.0
+    - affine==2.3.0
+    - fiona==1.8.20
+    - proj==8.2.0
+    - pyproj>=3.2.1,<=3.3.0
+    - pandas>=1.3.2,<1.4.3
+    - Rtree>=0.9.4
+    - geopandas>=0.10.2
+    - matplotlib>=3.4.2,<3.6.0
+    - scipy>=1.7.0,<1.8.1
+    - shapely>=1.8.0
+    - statsmodels>=0.12.2,<0.14.0
+    - rasterio>=1.2.10
+    - rasterstats>=0.16.0
+    - oasis>=0.1.3
+    - netCDF4>=1.5.5,<1.5.9
+    - scikit-image>=0.18.3
+    - scikit-learn>=0.24.2,<1.0.3
+    - ecmwf-api-client>=1.6.1
+    - joblib>=1.1.0
+    - geopy>=2.2.0
+    - loguru>=0.5.3
+    - geoplot>=0.5.1
+    - pytest-cov>=2.12.1
+    - pytest>=6.2.5
+
 test:
   imports:
     - Hapi
