--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
 dependencies:
   - pip >=21.3.1
   - numpy >=1.21.2,<1.22.4
+  - cython
   - gdal >=3.3.3,<3.4.1
   - affine >=2.3.0
   - fiona >=1.8.20
