Revert "correct the optimization module name"
This reverts commit 8be9670f0156fa794b1dc2e4135a12b0789b00c2.

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ shapely>=1.8.0
 statsmodels>=0.12.2,<0.14.0
 rasterio>=1.2.10
 rasterstats>=0.16.0
-Oasis-Optimization>=1.0.1
+oasis>=1.0.2
 netCDF4>=1.5.5,<1.5.9
 scikit-image>=0.18.3
 scikit-learn>=0.24.2,<1.0.3
