appveyor and github ci to work with the yaml file

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          $CONDA/bin/conda install -c conda-forge --yes --file requirements.txt --name base
+          $CONDA/bin/conda env update --file environment.yml --name base
           python setup.py install
 
 #    - name: Lint with flake8
