--- a/appveyor.yml
+++ b/appveyor.yml
@@ -84,15 +84,15 @@ install:
 
   # Install various dependencies
   - cmd: conda config --add channels conda-forge
-  #- cmd: while read requirement; do conda install --yes $requirement; done < requirement.txt
-#  - cmd: FOR /F "delims=~" %f in (requirement.txt) DO (conda install f --yes )
 #  - cmd: conda install --yes --file requirements.txt
-  - cmd: conda env update --file environment.yml --name Hapi-env
+#  - cmd: conda env update --file environment.yml --name Hapi-env
+  - cmd: conda env update --file environment.yml
 #  - cmd: conda update --yes -n base -c defaults conda
   - cmd: python -V
   - cmd: python setup.py build_ext --inplace
   - cmd: python setup.py install
   - cmd: pip install --upgrade coveralls
+  - cmd: pip install --upgrade pytest
 
 build: false
 # build Configuration, i.e. Debug, Release, etc.
