--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,10 +39,10 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Generate coverage report
-        working-directory: ../
+#        working-directory: ../
         run: |
           pwd
-          $CONDA/bin/pytest --cov=./ --cov-report=xml
+          $CONDA/bin/pytest --cov=Hapi --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
