--- a/environment.yml
+++ b/environment.yml
@@ -3,29 +3,16 @@ channels:
 dependencies:
   - python >=3.7.1,<3.10
   - pip >=21.3.1
-  - gdal >=3.3.3,<3.5.1
-  - affine >=2.3.0
-  - fiona >=1.8.20
-  - pyproj >=3.2.1,<=3.4.0
+  - matplotlib >=3.4.2,<3.6.0
   - pandas >=1.3.2,<1.4.3
   - geopandas >=0.10.2
-  - Rtree >=0.9.4
-  - matplotlib >=3.4.2,<3.6.0
-  - scipy >=1.7.0,<1.8.2
-  - shapely >=1.8.0
-  - statsmodels >=0.12.2,<0.14.0
-  - rasterio >=1.2.10
-  - rasterstats >=0.16.0
+  - gdal >=3.3.3,<3.5.1
   - oasis >=1.0.2
-  - netCDF4 >=1.5.5,<1.5.9
-  - scikit-learn >=0.24.2,<1.1.2
-  - scikit-image >=0.18.3
-  - ecmwf-api-client >=1.6.1
-  - joblib >=1.1.0
-  - geopy >=2.2.0
+  - pyramids >= 0.2.0
+  - statsmodels >=0.14.0
+  - scipy >=1.7.0,<1.8.2
+  - rasterstats >=0.16.0
   - pip:
-      - geoplot >=0.5.1
+      - digitalearth >= 0.1.0
       - loguru >=0.5.3
-      - pytest >=6.2.5
-      - pytest-cov >=2.12.1
 #    - ffmpeg-python
