--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,4 @@ examples/Hydrodynamic models/test_case/resultsMetricsHM_WL_Obs.geojson.csv
 examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson
 examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson.csv
 Hapi/java_functions.py
+*History*
