--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,4 @@ examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson
 examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson.csv
 Hapi/java_functions.py
 *History*
+Hapi/parameters/*.tif
