--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,54 @@
 [tool.poetry]
-name = "hapi"
+name = "HAPI-Nile"
 version = "1.3.1"
 description = "Distributed Hydrological and Hydrodynamic model"
 authors = ["Mostafa Farrag <moah.farag@gmail.com>"]
 license = "GNU General Public License v3"
+keywords=["Hydrology", "Distributed hydrological model"]
+repository = "https://github.com/MAfarrag/Hapi"
+documentation = "https://Hapi-hm.readthedocs.io/"
+classifiers=[
+        "Development Status :: 5 - Production/Stable",
+        "Environment :: Console",
+        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+        "Natural Language :: English",
+        "Programming Language :: Python :: 3",
+        "Programming Language :: Python :: 3.7",
+        "Programming Language :: Python :: 3.8",
+        "Programming Language :: Python :: 3.9",
+        "Topic :: Scientific/Engineering :: Hydrology",
+        "Topic :: Scientific/Engineering :: GIS",
+        "Intended Audience :: Science/Research",
+        "Intended Audience :: Developers",
+    ]
+packages = [
+    { include = "Hapi" },
+#    { include = "extra_package/**/*.py" },
+]
+
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
 loguru = "^0.6.0"
 requests = "^2.28.1"
 matplotlib = "^3.5.3"
-GDAL = "3.4.3"
+#GDAL = "3.4.3"
+gdal = {url = "https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp39-cp39-win_amd64.whl" }
+#Fiona = "1.8.21"
+fiona = {url = "https://download.lfd.uci.edu/pythonlibs/archived/Fiona-1.8.21-cp39-cp39-win_amd64.whl" }
+rasterio = "^1.3.2"
 pandas = "^1.4.4"
 geopandas = "^0.11.1"
 scipy = "^1.9.1"
 statsmodels = "^0.13.2"
 rasterstats = "^0.17.0"
-cleopatra = "^0.2.2"
-digitalearth = "^0.1.4"
-statista = "^0.1.4"
-pyramids-gis = "^0.2.4"
+cleopatra = "^0.2.3"
+digitalearth = "^0.1.5"
+statista = "^0.1.6"
+pyramids-gis = "^0.2.5"
 geostatista = "^0.1.2"
 Oasis-Optimization = "^1.0.2"
-rasterio = "^1.3.2"
+
 
 
 [tool.poetry.dev-dependencies]
@@ -40,6 +66,41 @@ reorder-python-imports = "^3.8.2"
 pre-commit-hooks = "^4.3.0"
 
 
+[tool.poetry.scripts]
+
+[tool.coverage.paths]
+source = ["Hapi", "*/site-packages"]
+
+
+
+[tool.coverage.run]
+branch = true
+source = ["Hapi"]
+
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 40
+
+
+[tool.isort]
+multi_line_output=3
+include_trailing_comma=true
+force_grid_wrap=0
+use_parentheses=true
+line_length=88
+ensure_newline_before_comments=true
+profile="black"
+
+
+[tool.pytest.ini_options]
+minversion = "7.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
+
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["setuptools", "poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
