--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,5 @@ examples/Hydrodynamic models/test_case/resultsMetricsRRM_Q_Obs.geojson.csv
 Hapi/java_functions.py
 *History*
 Hapi/parameters/*.tif
+*.bin
+*.cue
