--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,4 @@ Hapi/parameters/*.tif
 *.cue
 examples/Hydrological model/data/distributed_model/calibration/LB - tot.txt
 examples/Hydrological model/data/distributed_model/calibration/LB - tot.txt
+/examples/Hydrological model/data/meteo_data/meteodata_prepared/temp-rename-example/*.tif
