--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,9 @@ loguru = "^0.6.0"
 requests = "^2.28.1"
 matplotlib = "^3.5.3"
 #GDAL = "3.4.3"
-gdal = {url = "https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp39-cp39-win_amd64.whl" }
+#gdal = {url = "https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp39-cp39-win_amd64.whl" }
 #Fiona = "1.8.21"
-fiona = {url = "https://download.lfd.uci.edu/pythonlibs/archived/Fiona-1.8.21-cp39-cp39-win_amd64.whl" }
+#fiona = {url = "https://download.lfd.uci.edu/pythonlibs/archived/Fiona-1.8.21-cp39-cp39-win_amd64.whl" }
 rasterio = "^1.3.2"
 pandas = "^1.4.4"
 geopandas = "^0.11.1"
@@ -48,6 +48,7 @@ statista = "^0.1.6"
 pyramids-gis = "^0.2.5"
 geostatista = "^0.1.2"
 Oasis-Optimization = "^1.0.2"
+earth2observe = "^0.1.4"
 
 
 
