--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
-cleopatra >=0.2.2
-digitalearth >=0.1.4
-fiona >=1.8.21
-gdal >=3.4.3
-geopandas >=0.11.1
-loguru >=0.6.0
-matplotlib >=3.5.3
-numpy >=1.23.3
-oasis-optimization >=1.0.2
+python >=3.9,<3.15
+numpy >=1.23.5
+pip >=22.3.1
+gdal >=3.5.3
 pandas >=1.4.4
-pip >=22.2.2
-pyramids-gis >=0.2.4
+geopandas >=0.12.2
+matplotlib >=3.5.3
+scipy >=1.9.1
+statsmodels >=0.13.2
 rasterio >=1.3.2
 rasterstats >=0.17.0
-scipy >=1.9.1
-statista >=0.1.6
-statsmodels >=0.13.2
+Fiona >=1.8.21
+geostatista >=0.1.4
+statista >=0.1.7
+pyramids >=0.2.10
+earth2observe >=0.1.6
+Oasis >=1.0.2
+digitalearth >=0.1.9
+loguru >=0.6.0
+pytest >=7.1.3
+pytest-cov ==4.0.0
+requests >=2.28.1
