--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
   - earth2observe >=0.1.6
   - Oasis >=1.0.2
   - digitalearth >=0.1.9
+  - joblib >=1.2.0
   - loguru >=0.6.0
   - pytest >=7.1.3
   - pytest-cov ==4.0.0
