update tests files

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,9 @@ Hapi/parameters/*.tif
 examples/Hydrological model/data/distributed_model/calibration/LB - tot.txt
 examples/Hydrological model/data/distributed_model/calibration/LB - tot.txt
 /examples/Hydrological model/data/meteo_data/meteodata_prepared/temp-rename-example/*.tif
-examples/Hydrodynamic models/test_case/results/q/*
-examples/Hydrodynamic models/test_case/results/h/*
-examples/Hydrodynamic models/test_case/results/USbnd/*
+examples/Hydrodynamic models/test_case/results/q/right_results/*
+examples/Hydrodynamic models/test_case/results/h/right_results/*
+examples/Hydrodynamic models/test_case/results/USbnd/right_results/*
+examples/Hydrodynamic models/test_case/results/q/New folder/*
+examples/Hydrodynamic models/test_case/results/h/New folder/*
+examples/Hydrodynamic models/test_case/results/USbnd/New folder/*
