--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,7 +35,7 @@ jobs:
             gdalinfo --version
       - name: Install dependencies
         run: |
-            pip install -r requirements.txt -r requirements_dev.txt
+            pip install -r requirements.txt -r requirements-dev.txt
             pip install .
 
 #      - name: Install dependencies
