--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ geostatista >=0.1.4
 loguru >=0.6.0
 matplotlib >=3.5.3
 numpy >=1.23.5
-Oasis >=1.0.2
+Oasis-Optimization >=1.0.2
 pandas >=1.4.4
 pip >=22.3.1
-pyramids >=0.2.10
+pyramids-gis >=0.2.10
 pytest >=7.1.3
 pytest-cov ==4.0.0
 python >=3.9,<3.15
