--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest] #, macos-latest, windows-latest
-        python-version: ["3.9" ] # "3.10", "3.11", "3.12"
+        os: [ ubuntu-latest]
+        python-version: ["3.9", "3.10", "3.11"]
     env:
       OS: ${{ matrix.os }}
 
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
             pip install -r requirements.txt -r requirements-dev.txt
-            pip install .
+            python setup.py install
 
 #      - name: Install dependencies
 #        run: |
@@ -54,17 +54,17 @@ jobs:
 #        working-directory: ../
         run: |
           pwd
-          python -m pytest --cov=Hapi --cov-report=xml
+          python -m pytest -vvv --cov=hapi --cov-report=xml
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage1.xml,./coverage2.xml
-          directory: ./coverage/reports/
-          flags: unittests
-          env_vars: OS,PYTHON
-          name: codecov-umbrella
-          fail_ci_if_error: true
-          path_to_write_report: ./coverage/codecov_report.txt
-          verbose: true
+#      - name: Upload coverage to Codecov
+#        uses: codecov/codecov-action@v1
+#        with:
+#          token: ${{ secrets.CODECOV_TOKEN }}
+#          files: ./coverage1.xml,./coverage2.xml
+#          directory: ./coverage/reports/
+#          flags: unittests
+#          env_vars: OS,PYTHON
+#          name: codecov-umbrella
+#          fail_ci_if_error: true
+#          path_to_write_report: ./coverage/codecov_report.txt
+#          verbose: true
