--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-digitalearth >=0.1.9
-earth2observe >=0.1.6
+digitalearth >=0.1.10
+earth2observe >=0.1.7
 Fiona >=1.8.21
 gdal >=3.5.3
 geopandas >=0.12.2
-geostatista >=0.1.4
+geostatista >=0.1.5
+statista >=0.1.7
 loguru >=0.6.0
 matplotlib >=3.5.3
 numpy >=1.23.5
 Oasis-Optimization >=1.0.2
 pandas >=1.4.4
 pip >=22.3.1
-pyramids-gis >=0.2.10
-# python >=3.9,<3.11
+pyramids-gis >=0.2.11
 rasterio >=1.3.2
 rasterstats >=0.17.0
 requests >=2.28.1
