fix error test_ReadRRMHydrograph_one_location test

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -54,8 +54,9 @@ jobs:
 #        $CONDA/bin/flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Generate coverage report
+#      - name: Generate coverage report
 #        working-directory: ../
+
         run: |
           pwd
           python -m pytest -vvv --cov=hapi --cov-report=xml
