--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -54,7 +54,7 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Generate coverage report
-        working-directory: ../
+#        working-directory: ../
         run: |
           pwd
           python -m pytest -vvv --cov=hapi --cov-report=xml
