--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ dependencies:
   - python >=3.9,<3.11
   - numpy >=1.23.5
   - pip >=22.3.1
+  - PyYAML >=0.6.0
+  - pathlib >=1.0.1
   - gdal >=3.5.3
   - pandas >=1.4.4
   - geopandas >=0.12.2
