add serapeum_utils package

--- a/environment.yml
+++ b/environment.yml
@@ -21,6 +21,7 @@ dependencies:
   - earth2observe >=0.1.7
   - Oasis >=1.0.2
   - digitalearth >=0.1.10
+  - serapeum_utils >=0.1.1
   - joblib >=1.2.0
   - loguru >=0.6.0
   - requests >=2.28.1
