--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pandas >=1.4.4
 pathlib >=1.0.1
 pip >=22.3.1
 pyramids-gis >=0.2.11
+serapeum_utils >=0.1.1
 PyYAML >=0.6.0
 rasterio >=1.3.2
 rasterstats >=0.17.0
