--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ geopandas >=0.12.2
 geostatista >=0.1.5
 loguru >=0.6.0
 matplotlib >=3.5.3
+cleopatra >=0.2.6
 numpy >=1.23.5
 Oasis-Optimization >=1.0.2
 pandas >=1.4.4
