correct pyramids package name in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ rasterstats >=0.17.0
 Fiona >=1.8.21
 geostatista >=0.1.6
 statista >=0.1.8
-pyramids >=0.3.2
+pyramids-gis >=0.3.2
 earth2observe >=0.2.2
 Oasis >=1.0.2
 cleopatra >=0.2.7
