correct oasis package name in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ geostatista >=0.1.6
 statista >=0.1.8
 pyramids-gis >=0.3.2
 earth2observe >=0.2.2
-Oasis >=1.0.2
+Oasis-Optimization >=1.0.2
 cleopatra >=0.2.7
 digitalearth >=0.1.11
 serapeum_utils >=0.1.1
