snake case method names

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -108,7 +108,7 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        entry: pytest -vvv --cov=statista
+        entry: pytest -vvv --cov=Hapi
         language: system
         pass_filenames: false
         always_run: true
