install pyramids from github directly

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
             #$CONDA/bin/mamba env update --file environment.yml --name base
+            pip install git+https://github.com/Serapieum-of-alex/pyramids.git@restructure
             pip install -r requirements.txt -r requirements-dev.txt
             python setup.py install
 
