install cleopatra from github directly

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
             #$CONDA/bin/mamba env update --file environment.yml --name base
             pip install git+https://github.com/Serapieum-of-alex/pyramids.git@restructure
+            pip install git+https://github.com/Serapieum-of-alex/cleopatra.git@refactoring
             pip install -r requirements.txt -r requirements-dev.txt
             python setup.py install
 
