refactor the catchment module

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 fail_fast: true
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.5.0
     hooks:
       - id: end-of-file-fixer
         name: "[py -  check] validate yaml"
@@ -51,14 +51,14 @@ repos:
 #        args: [ -i, --wrap-summaries, "0" ]
 
   - repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.1.1
+    rev: 6.3.0
     hooks:
       - id: pydocstyle
         name: "[py   - check] pydocstyle"
         files: ^Hapi/
 
   - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 6.1.0
     hooks:
       - id: flake8
         name: "[py   - check] flake8"
@@ -70,7 +70,7 @@ repos:
   #  hooks:
   #    - id: black
   - repo: https://github.com/ambv/black
-    rev: 22.8.0
+    rev: 23.11.0
     hooks:
       - id: black
         name: "[py   - format] black"
@@ -83,7 +83,7 @@ repos:
 
   # pre-commit-shell: Checks shell scripts against shellcheck.
   - repo: https://github.com/detailyang/pre-commit-shell
-    rev: v1.0.6
+    rev: 1.0.5
     hooks:
       - id: shell-lint
         name: "[bash -   lint] shell-lint"
@@ -108,7 +108,7 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        entry: pytest -vvv --cov=Hapi
+        entry: pytest -vvv --cov=Hapi --cov-report term-missing
         language: system
         pass_filenames: false
         always_run: true
