ignore fig_share tests in ci

--- a/.github/workflows/conda-deployment.yml
+++ b/.github/workflows/conda-deployment.yml
@@ -40,4 +40,4 @@ jobs:
           conda list
           conda config --show-sources
           conda config --show
-          pytest -sv -m "not plot"
+          pytest -sv -m "not plot" -m "not fig_share"
