--- a/.github/workflows/pypi-deployment.yml
+++ b/.github/workflows/pypi-deployment.yml
@@ -38,6 +38,8 @@ jobs:
       - name: Run Tests
         run: |
           python -m pytest -vvv  -m "not fig_share" --cov=src/Hapi --cov-report=xml
+        env:
+          HAPI_DATA_DIR: ${{ github.workspace }}/src/Hapi/parameters
 
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
